Made userform Made the user new and create action

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,7 +48,9 @@
                 </div>
                 <!-- End Help Navigation -->
 
-        {% block body %}{% endblock %}
+                <h1>{{ page.header }}</h1>
+                {% block body %}{% endblock %}
+
         </div>
         <!-- End Content -->
 
