Added security for the application

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,8 @@
         <a href="{{ path('user') }}">User</a> |
         <a href="{{ path('location') }}">Location</a> |
         <a href="{{ path('role') }}">Role</a> |
-        <a href="{{ path('group') }}">Group</a>
+        <a href="{{ path('group') }}">Group</a> |
+        <a href="{{ path('_security_logout') }}">Logout</a> |
         </p>
         {% block body %}{% endblock %}
     </body>
