Added more menues.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,10 +9,33 @@
     </head>
     <body>
       <p>
-        <a href="{{ path('user') }}">User</a> |
         <a href="{{ path('location') }}">Location</a> |
-        <a href="{{ path('role') }}">Role</a> |
         <a href="{{ path('group') }}">Group</a> |
+        <a href="{{ path('user') }}">User</a> |
+        <a href="{{ path('user') }}">Ban</a> |
+        <a href="{{ path('user') }}">Subscription</a> |
+        <a href="{{ path('user') }}">Ticket</a> |
+        <a href="{{ path('user') }}">Company</a> |
+        <a href="{{ path('user') }}">Company config</a> |
+        <a href="{{ path('user') }}">Mail</a> |
+        <a href="{{ path('user') }}">Shop</a> |
+        <a href="{{ path('user') }}">Category</a> |
+        <a href="{{ path('user') }}">Module</a> |
+        <a href="{{ path('user') }}">Order</a> |
+        <a href="{{ path('user') }}">Order Item</a> |
+        <a href="{{ path('user') }}">Order Status</a> |
+        <a href="{{ path('user') }}">Order Status History</a> |
+        <a href="{{ path('user') }}">Payment Method</a> |
+        <a href="{{ path('user') }}">Product</a> |
+        <a href="{{ path('user') }}">Special</a> |
+        <a href="{{ path('user') }}">Transaction</a> |
+        <a href="{{ path('user') }}">Transaction Status</a> |
+        <a href="{{ path('user') }}">Value</a> |
+        <a href="{{ path('user') }}">Config Group</a> |
+        <a href="{{ path('user') }}">Config</a> |
+        <a href="{{ path('user') }}">Currency</a> |
+        <a href="{{ path('user') }}">Language</a> |
+        <a href="{{ path('user') }}">Role</a> |
         <a href="{{ path('_security_logout') }}">Logout</a> |
         </p>
         {% block body %}{% endblock %}
