Changed some database values for group entity Fixed user view

--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -26,7 +26,7 @@
       <td><input type="checkbox" /></td>
       <td>{{ user.id }}</td>
       <td>{{ user.username }}</td>
-      <td>{{ user.createdAt }}</td>
+      <td>{{ user.createdAt|date("Y-m-d") }}</td>
       <td><ul>
         <li><a href="{{ path('user_edit', { 'id':user.id }) }}">Edit</a></li>
         <li><a href="{{ path('user_delete', { 'id':user.id }) }}">Delete</a></li>
