Added shop- and order controllers

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,15 +13,11 @@
         <a href="{{ path('group') }}">Group</a> |
         <a href="{{ path('user') }}">User</a> |
         <a href="{{ path('user') }}">Ban</a> |
-        <a href="{{ path('user') }}">Subscription</a> |
-        <a href="{{ path('user') }}">Ticket</a> |
         <a href="{{ path('user') }}">Company</a> |
         <a href="{{ path('user') }}">Company config</a> |
         <a href="{{ path('user') }}">Mail</a> |
-        <a href="{{ path('user') }}">Shop</a> |
-        <a href="{{ path('user') }}">Category</a> |
-        <a href="{{ path('user') }}">Module</a> |
-        <a href="{{ path('user') }}">Order</a> |
+        <a href="{{ path('shop_category') }}">Category</a> |
+        <a href="{{ path('shop_order') }}">Order</a> |
         <a href="{{ path('user') }}">Order Item</a> |
         <a href="{{ path('user') }}">Order Status</a> |
         <a href="{{ path('user') }}">Order Status History</a> |
