Added category list view.

--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -2,4 +2,26 @@
 
 {% block body %}
 
+<table>
+  <tr>
+    <th>Category Id</th>
+    <th>Category name</th>
+    <th>Actions</th>
+  </tr>
+{% for category in categories %}
+  <tr>
+    <td>{{ category.id }}</td>
+    <td>{{ category.categoryName }}</td>
+    <td><ul>
+      <li><a href="{{ path("shop_category_edit",{"id":category.id}) }}">Edit</li>
+      <li><a href="{{ path("shop_category_delete",{"id":category.id}) }}">Delete</li>
+    </ul></td>
+  </tr>
+{% else %}
+  <tr>
+    <td colspan="3">There is no such categories.</td>
+  </tr>
+{% endfor %}
+</table>
+
 {% endblock %}
