add a link between category and products.

--- a/src/Club/ShopBundle/Resources/views/Category/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Category/index.html.twig
@@ -11,7 +11,7 @@
 {% for category in categories %}
   <tr>
     <td>{{ category.id }}</td>
-    <td>{{ category.categoryName }}</td>
+    <td><a href="{{ path("shop_product",{"category":category.id}) }}">{{ category.categoryName }}</a></td>
     <td><ul>
       <li><a href="{{ path("shop_category_edit",{"id":category.id}) }}">Edit</li>
       <li><a href="{{ path("shop_category_delete",{"id":category.id}) }}">Delete</li>
