--- a/src/Club/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Product/index.html.twig
@@ -6,12 +6,14 @@
   <tr>
     <th>Product Id</th>
     <th>Product name</th>
+    <th>Price</th>
     <th>Actions</th>
   </tr>
 {% for product in products %}
   <tr>
     <td>{{ product.id }}</td>
     <td>{{ product.productName }}</td>
+    <td>{{ product.price }}</td>
     <td><ul>
       <li><a href="{{ path("shop_product_edit",{"id":product.id}) }}">Edit</li>
       <li><a href="{{ path("shop_product_delete",{"id":product.id}) }}">Delete</li>
@@ -20,7 +22,7 @@
   </tr>
 {% else %}
   <tr>
-    <td colspan="3">There is no such products.</td>
+    <td colspan="4">There is no such products.</td>
   </tr>
 {% endfor %}
 </table>
