Added empty basket functionality.

--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -44,5 +44,8 @@
   </tr>
   </tfoot>
 </table>
+<ul>
+  <li><a href="{{ path("shop_checkout_empty") }}">Empty basket</a></li>
+</ul>
 
 {% endblock %}
