Added link to payment.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,9 +18,8 @@
         <a href="{{ path('user') }}">Mail</a> |
         <a href="{{ path('shop_category') }}">Category</a> |
         <a href="{{ path('shop_order') }}">Order</a> |
-        <a href="{{ path('user') }}">Order Item</a> |
+        <a href="{{ path('shop_checkout') }}">Basket</a> |
         <a href="{{ path('user') }}">Order Status</a> |
-        <a href="{{ path('user') }}">Order Status History</a> |
         <a href="{{ path('user') }}">Payment Method</a> |
         <a href="{{ path('user') }}">Product</a> |
         <a href="{{ path('user') }}">Special</a> |
