--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -46,6 +46,8 @@
 </table>
 <ul>
   <li><a href="{{ path("shop_checkout_empty") }}">Empty basket</a></li>
+  <li><a href="{{ path("shop_category") }}">Continue shopping</a></li>
+  <li><a href="{{ path("shop_pategory") }}">Continue to payment</a></li>
 </ul>
 
 {% endblock %}
