Upgraded to paid version of adminizio.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -100,8 +100,8 @@
                                         </fieldset>
                                 </form>
 
-                                <!-- Create a new project -->
-                                <p id="btn-create" class="box"><a href="#"><span>Create a new project</span></a></p>
+                                <!-- Create a new user -->
+                                <p id="btn-create" class="box"><a href="#"><span>Create a new user</span></a></p>
 
                         </div> <!-- /padding -->
 
