--- a/web/css/2col.css
+++ b/web/css/2col.css
@@ -1,8 +1,7 @@
 /* =============================================================================
 
 	2COL.CSS
-	version: 1.7
-	updated: 2009-03-14, 12:44 GMT+1
+	updated: 2009-03-20, 12:24 GMT+1
 
 ============================================================================= */
 
@@ -10,7 +9,7 @@
 LAYOUT
 ============================================================================= */
 
-#cols {position:relative; margin:15px 0; padding-right:15px; background:url("../design/content.gif") 230px 0 repeat-y;}
+#cols {position:relative; margin:15px 0; padding-right:15px; background:url("../images/content.gif") 230px 0 repeat-y;}
 #aside {float:left; width:215px; margin-right:0;}
 #content {margin-left:232px; overflow:visible;}
 #tray .ico-col2 {display:none;}
